Update to BU51 code and fix for walk dates on IOS/Safari

--- a/jsonwalks/bu51/bu51style.css
+++ b/jsonwalks/bu51/bu51style.css
@@ -1,6 +1,7 @@
 /*
 BU51 styles to override ramblers-webs defaults
-*/
+*/	
+
 div.bu51-nextwalk div.odd span.item,
 div.bu51-nextwalk div.even span.item{
     background-color: transparent !important;
@@ -11,19 +12,27 @@ div.bu51-nextwalk div.even:hover span.item{
     background-color: transparent !important;
     color:#a8b400;
 }
-.odd,.even{
-    background-color: transparent !important;
+.odd {
+    background-color: #00000011 !important;
 }
+.even{
+    background-color: #00000022 !important;
+}
+
 .odd:hover,.even:hover{
     background-color: transparent !important;
+	color:#CCCCCC;
 }
 div.bu51Nextwalk{
     background-color:#5b491f;
     color:#FFFFFF;
 }
-div.bu51Nextwalk div:hover{
-    color:#CCCCCC;
+
+.js-modal.ramblers abbr[title] {
+    border-bottom: none;
+	text-decoration: none;
 }
+
 div.js-modal.ramblers {
     padding-top: unset;
     margin-top: 2%;
@@ -41,6 +50,13 @@ div.js-modal.ramblers {
     border: solid 1px #D7A901;
     }
 
+.modal-content > div {
+	background-color:#fff;
+}
+.modal-content > div > p, .modal-content > div > ul {
+	padding:1px 5px;
+}
+
 .modal-content .modal-header {
     padding: 4px;
     border-bottom: 0px solid #eee;
@@ -52,7 +68,7 @@ div.js-modal.ramblers {
     background-color: rgb(91 73 31 / 90%);
  }
 	
-.modal-header .btn {
+.modal-header .btn, div#rainner button {
 	border: none;
 	background: none;
 	color:#fff;
@@ -66,7 +82,9 @@ div.js-modal.ramblers {
 	transition: all 0.2s;
 	font-size: 0.8rem;
 	padding: 0.4rem;
-	border-radius: 4px;}
+	border-radius: 4px;
+	margin-right: 2px;
+	}
 
 .mappopup {
     cursor: pointer;
@@ -76,10 +94,18 @@ div.js-modal.ramblers {
     border-radius: 4px;
     padding: 0.2rem;
     display: inline-block;
+    margin-right: 4px;
+}
+
+.modal-header .btn:hover, div#rainner button:hover, span.mappopup:hover{
+ background-color: #C75B12;
+ color: #fff;
 }
 
 div.walkstdfulldetails{
 background-color: unset;
+border:none;
+border-radius: unset;
 }
 
 @media only screen and (max-width: 768px){
@@ -88,20 +114,17 @@ background-color: unset;
 	}
 }
 	
-div.walkstdfulldetails, div.walkstdfulldetails div.group, div.walkstdfulldetails div.reason, div.walkstdfulldetails div.basics, 
-div.walkstdfulldetails div.nomeetplace, div.walkstdfulldetails div.meetplace, div.walkstdfulldetails div.startplace, 
-div.walkstdfulldetails div.nostartplace, div.walkstdfulldetails div.finishplace, div.walkstdfulldetails div.difficulty, 
-div.walkstdfulldetails div.walkcontact, div.walkstdfulldetails div.walkmedia, div.walkstdfulldetails div.festivals, div.walkstdfulldetails 
-div.strands, div.walkstdfulldetails div.suitability, div.walkstdfulldetails div.surroundings, div.walkstdfulldetails div.theme, 
-div.walkstdfulldetails div.specialStatus, div.walkstdfulldetails div.facilities, div.walkstdfulldetails div.walkdates, div.ra-map-container {
+div.walkstdfulldetails div.group, div.walkstdfulldetails div.reason, div.walkstdfulldetails div.basics, div.walkstdfulldetails div.nomeetplace, div.walkstdfulldetails div.meetplace, div.walkstdfulldetails div.startplace, div.walkstdfulldetails div.nostartplace, div.walkstdfulldetails div.finishplace, div.walkstdfulldetails div.difficulty, div.walkstdfulldetails div.walkcontact, div.walkstdfulldetails div.walkmedia, div.walkstdfulldetails div.festivals, div.walkstdfulldetails div.strands, div.walkstdfulldetails div.suitability, div.walkstdfulldetails div.surroundings, div.walkstdfulldetails div.theme, div.walkstdfulldetails div.specialStatus, div.walkstdfulldetails div.facilities, div.walkstdfulldetails div.walkdates, div.walkstdfulldetails div.walkitem, div.walkstdfulldetails div.map, div.ra-map-container {
 	border:none;
 	border-radius: unset;
 	margin: 3px 2px;
 	line-height: 1.5;
 	width: 98%;
-
+	font-size: 100%;
 }
-
+div.walkstdfulldetails span.walktitle {
+	font-size: 150%;
+}
 div.walkstdfulldetails div.description p {
     margin: 0 0 0.75rem 0;}
 
@@ -110,10 +133,11 @@ span.title {
 }
 
 @media only screen and (max-width: 414px){
-    div.walkstdfulldetails div.reason, div.walkstdfulldetails div.basics div.description, div.walkstdfulldetails div.meetplace div.place, 
-    div.walkstdfulldetails div.startplace div.place, div.walkstdfulldetails div.finishplace div.place, div.walkstdfulldetails div.group {
+    div.walkstdfulldetails div.reason, div.walkstdfulldetails div.basics div.description, div.walkstdfulldetails div.meetplace div.place, div.walkstdfulldetails div.startplace div.place, div.walkstdfulldetails div.finishplace div.place, div.walkstdfulldetails div.group, div.walkstdfulldetails div.additionalnotes
+      {
         font-size: 100%;
     }
+    div.walkmedia img.walkmedia {max-width: 70%}
 }
 	
 img.walkmedia {
@@ -121,7 +145,7 @@ img.walkmedia {
     -moz-border-radius: unset;
     border-radius: unset;
     max-height: 250px;
-    max-width: 80%;
+    max-width: 85%;
 }
 
 div.walk-image {
@@ -130,4 +154,100 @@ div.walk-image {
     align-items: center;
     flex-direction: row;
     margin: 2px 0px;
+}
+
+div.ra-map-container {
+	background: unset;
+	padding:unset;
+	margin:unset
+}
+	
+table tr td.ra-tab {
+    cursor: pointer;
+    font-weight: normal;
+    background-color: #d7a900;
+    font-size: 115%;
+    border-right: 4px solid #fff !important;
+    border-radius: unset;
+    color: #fff;
+    border-width: 0px;
+}
+.ra-tab-options{
+    width: fit-content ;
+}
+
+table tr td.ra-tab:hover {
+    background-color: #206c49;
+    font-size: 115%;
+    font-weight: bold;
+}
+
+table tr td.active {
+    background-color: #5b491f;
+    font-size: 115%;
+    font-weight: bold;
+    color: #fff;
+}
+	
+	div#rainner {
+    padding-top: 25px;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    background-color: #5b491f;
+    border-radius: unset;
+    border: 0px;
+    border-color: unset;
+    border-style: unset;
+    min-width: 270px;
+    color: #fff;}
+
+	div#rainner .leaflet-popup-content-wrapper, .leaflet-popup-tip {
+    box-shadow: 0 3px 14px rgb(0 0 0 / 40%);
+    background-color: #5b491f;
+    color: #fff;}
+	
+div#rainner .leaflet-popup-content-wrapper {border-radius: unset};
+
+	div#rainner .leaflet-popup-content {
+    margin: 8px 12px;
+    line-height: 1.4;}
+	
+
+	div#rainner .leaflet-container a {
+    color: #a8b400;}
+
+.fc-list-day-cushion.fc-cell-shaded {
+	background-color: #5b491f !important;
+    }
+
+.fc-theme-standard a, .fc-list-day-cushion a {
+    color: #d7a900;
+    }
+
+.fc-event:hover{
+	color: #5b491f !important;
+}
+
+.cancelledWalks { background-color:#d7a900;
+                  border-radius: unset;
+                  padding: 5px;
+                  border-style: unset;
+                  
+}
+.cancelledWalks h3 {
+    color:#5b491f;
+}
+
+.cancelledWalk {color:#fff; }
+.cancelreason {
+    margin-left: unset;
+    color:#5b491f; 
+    font-size: 100%;
+}
+
+.nextwalkCancelled a,
+span.walkCancelled,
+div.fc a.walkCancelled{
+    color:#ccc; 
 }
